# nvidiacraft

./: .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
src/client/java/net/raeen/client/: NvidiacraftClient.java
src/client/java/net/raeen/client/mixin/: ExampleClientMixin.java
src/client/java/net/raeen/mixin/: ExampleClientMixin.java  GameRendererMixin.java  IrisPipelineMixin.java  MinecraftClientMixin.java
src/client/java/net/raeen/nvidiacraft/: JitterManager.java
src/client/resources/: nvidiacraft.client.mixins.json
src/main/java/net/raeen/: Nvidiacraft.java
src/main/java/net/raeen/mixin/: ExampleMixin.java  GameRendererMixin.java  IrisPipelineMixin.java  MinecraftClientMixin.java
src/main/java/net/raeen/nvidiacraft/: JitterManager.java  NativeLoader.java
src/main/resources/: fabric.mod.json  nvidiacraft.mixins.json
src/native/: CMakeLists.txt  NvidiacraftJNI.cpp
